Added Functionality of show deleted to Reconciliation

--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -28,7 +28,8 @@
 
                                 </div>
                                 <div>
-                                    <label class="switch"><input type="checkbox" [(checked)]="AllOrActive"  (change)="changeToggleValue()" ><div class="slider round"><!--ADDED HTML --><span class="on">All</span><span class="off">Active</span><!--END--></div></label>
+                                    <!-- <label class="switch"><input type="checkbox" [(checked)]="AllOrActive"  (change)="changeToggleValue()" ><div class="slider round"><span class="on">All</span><span class="off">Active</span></div></label> -->
+                                
                                 </div>
                                 <div class="kt-subheader__toolbar">
                                     <div class="kt-subheader__wrapper">
@@ -103,10 +104,11 @@
                                                 <i class="fas fa-list-ul"></i></div>
                                             <div class="dropdown-menu">
                                                 <div  class="dropdown-item">
-                                                    Show Deleted <label class="kt-checkbox kt-checkbox--bold ml-5 kt-checkbox--brand">
-                                                        <input  type="checkbox">
+                                                    <label class="kt-checkbox kt-checkbox--bold mx-2 kt-checkbox--brand">
+                                                        <input  type="checkbox" [(checked)]="AllOrActive"  (change)="changeToggleValue()">
                                                         <span></span>
                                                     </label>
+                                                    Show Deleted 
                                                 </div>
                                             </div>
                                         </th>
