--- a/angular/src/app/main/reports/trialbalance-reports/trialbalance-reports.component.html
+++ b/angular/src/app/main/reports/trialbalance-reports/trialbalance-reports.component.html
@@ -29,7 +29,7 @@
                                 </div>
                                 <div class="kt-subheader__toolbar">
                                     <div class="kt-subheader__wrapper">
-                                        <button data-toggle="modal" data-target="#kt_modal_6" class="btn btn-brand" (click)="RedirectToAddNew()">Compare</button>                                                        
+                                        <button data-toggle="modal" data-target="#kt_modal_6" class="btn btn-brand">Compare</button>                                                        
                                     </div>
                                 </div>
                             </div>
