Login and Signup spell checked

--- a/angular/src/account/register/tenant-user-register.component.html
+++ b/angular/src/account/register/tenant-user-register.component.html
@@ -51,7 +51,7 @@
                                             Email is required.
                                         </div>
                                         <div class="text-danger" *ngIf="emailAddress.errors.pattern">
-                                            Email Format Is wrong.
+                                            Email format is wrong.
                                         </div>
                                     </div>
                                 </div>
