Spell check for reconciliation

--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -426,7 +426,7 @@
                                         <tr>
                                             <th></th>
                                             <th class="text-navyblue big">{{"Beginning Amount" | localize}}</th>
-                                            <th class="text-navyblue big">{{"Accrued Amount" | localize}}</th>
+                                            <th class="text-navyblue big">{{"Accrued Amortization" | localize}}</th>
                                             <th class="text-navyblue big">{{"Net Amount" | localize}}</th>
                                         </tr>
                                     </thead>
