Action button Added Reports

--- a/angular/src/app/main/reports/task-report/task-report.component.html
+++ b/angular/src/app/main/reports/task-report/task-report.component.html
@@ -9,10 +9,10 @@
             <span class="kt-subheader__desc">
             </span>
         </div>
-        <div class="kt-subheader__wrapper pt-4">
-            <div class="dropdown"
+        <div class="kt-subheader__wrapper pt-3">
+            <div class="dropdown border-grey px-1 py-1" style="background-color: #F0F8FF;"
                 data-toggle="dropdown" >
-                <i class="fas fa-plus"></i>
+                <i class="fas fa-plus" style="color: cornflowerblue;"></i>
             </div>
             <div class="dropdown-menu">
                 <div  class="dropdown-item">
