Closing checklist sorting fix

--- a/angular/src/app/main/reports/task-report/task-report.component.html
+++ b/angular/src/app/main/reports/task-report/task-report.component.html
@@ -17,7 +17,7 @@
             <div class="dropdown-menu">
                 <div  class="dropdown-item">
                     <label>
-                         <span> Download</span>
+                         <span id="ExportUsersToExcelButton" (click)="exportToExcel()"> Download</span>
                      </label>
                 </div>
             </div>
