--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="kt-grid kt-grid--ver kt-grid--root" [@routerTransition]>
 <div class="kt-grid kt-grid--hor kt-grid--root kt-login kt-login--v2 kt-login--signin" id="kt_login">
-    <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor"
+    <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor container-fluid"
         style="background-image: url(./assets/media//bg/background_1.png);">
-        <div *ngIf="multiTenancySideIsTeanant" routerLink="/account/tenant-user-register" class="row d-flex justify-content-end pt-3 pr-5">
+        <div *ngIf="!multiTenancySideIsTeanant" routerLink="/account/tenant-user-register" class="row d-flex justify-content-end pt-3 pr-5">
             <a  
                 class="btn btn-transparent border text-white">Get Started</a>
         </div>
@@ -62,7 +62,7 @@
                     </form>
                 </div>
 
-                <div *ngIf="!multiTenancySideIsTeanant" class="kt-login__account">
+                <div *ngIf="multiTenancySideIsTeanant" class="kt-login__account">
                     <span class="kt-login__account-msg">
                         Don't have an account yet ?
                     </span>&nbsp;&nbsp;
