--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -174,7 +174,7 @@
                                             <div *ngIf="item.attachments?.length == 0" class="col-md-12">
                                                 <div  class="drag_drop_box form-group">
                                                      <div  class="attachments_section_none">
-                                                        <a  *ngIf="item.attachments?.length == 0"class="attachement_btn">
+                                                        <a  *ngIf="item.attachments?.length == 0"class="attachement_btn pt-3">
                                                             <span>{{"No Attachments" | localize}}</span>
                                                         </a>
                                                     </div>    
@@ -241,7 +241,7 @@
                                                     <div *ngIf="item.attachments?.length == 0" class="col-md-12">
                                                         <div  class="drag_drop_box form-group">
                                                              <div  class="attachments_section_none">
-                                                                <a  *ngIf="item.attachments?.length == 0"class="attachement_btn">
+                                                                <a  *ngIf="item.attachments?.length == 0"class="attachement_btn pt-3">
                                                                     <span>{{"No Attachments" | localize}}</span>
                                                                 </a>
                                                             </div>    
