--- a/angular/src/app/main/reports/trialbalance-reports/trialbalance-reports.component.html
+++ b/angular/src/app/main/reports/trialbalance-reports/trialbalance-reports.component.html
@@ -200,8 +200,8 @@
                                             {{l('AccountName')}}
                                         </th>
                                         <th style="width: 220px"> {{l('AccountNumber')}} </th>
-                                        <th style="width: 120px"> {{l('BalanceJan')}} </th>
-                                        <th style="width: 120px"> {{l('BalanceFeb')}} </th>
+                                        <th style="width: 120px"> {{l('1stMonthBalance')}} </th>
+                                        <th style="width: 120px"> {{l('2ndMonthBalance')}} </th>
 
                                     </tr>
                                     
