Reconciliation UI fixes

--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -171,10 +171,10 @@
                                                             </div>
                                                         </span> 
                                                     </div>        
-                                            <div *ngIf="item.attachments?.length == 0" class="col-md-12">
+                                            <div *ngIf="item.attachments?.length == 0" class="col-md-12" style="padding-top:25px;">
                                                 <div  class="drag_drop_box form-group">
                                                      <div  class="attachments_section_none">
-                                                        <a  *ngIf="item.attachments?.length == 0"class="attachement_btn pt-3">
+                                                        <a  *ngIf="item.attachments?.length == 0"class="attachement_btn">
                                                             <span>{{"No Attachments" | localize}}</span>
                                                         </a>
                                                     </div>    
@@ -238,10 +238,10 @@
                                                                     </div>
                                                                 </span> 
                                                             </div>        
-                                                    <div *ngIf="item.attachments?.length == 0" class="col-md-12">
+                                                    <div *ngIf="item.attachments?.length == 0" class="col-md-12" style="padding-top:25px;">
                                                         <div  class="drag_drop_box form-group">
                                                              <div  class="attachments_section_none">
-                                                                <a  *ngIf="item.attachments?.length == 0"class="attachement_btn pt-3">
+                                                                <a  *ngIf="item.attachments?.length == 0"class="attachement_btn">
                                                                     <span>{{"No Attachments" | localize}}</span>
                                                                 </a>
                                                             </div>    
