Commitment vlaue changed

--- a/angular/src/app/admin/tenants/customized-plan-request.component.html
+++ b/angular/src/app/admin/tenants/customized-plan-request.component.html
@@ -49,8 +49,8 @@
                             <div class="form-group">
                                 <label>Commitment</label>
                                 <select name="Commitment" [(ngModel)]="contactus.commitment" class="form-control bg-white border">
-                                    <option value="0">Monthly Plan</option>
-                                    <option value="1">Annullly Plan</option>
+                                    <option value="30">Monthly Plan</option>
+                                    <option value="365">Annual Plan</option>
                                 </select>
                             </div>
                         </div>
