custom payment on buy

--- a/angular/src/account/payment/buy.component.html
+++ b/angular/src/account/payment/buy.component.html
@@ -38,7 +38,7 @@
             </label>
         </div>
 
-        <div *ngIf="price.length>0" class="form-group">
+        <div *ngIf="edition.annualPrice > 0" class="form-group">
             <label class="kt-radio">
                 <input class="form-control" type="radio" name="PaymentPeriodType" [checked]="selectedPaymentPeriodType==paymentPeriodType.Annual"
                 [value]="paymentPeriodType.Annual"
@@ -49,19 +49,31 @@
             </label>
         </div>
 
-        <div *ngIf="price.length>0" class="form-group">
-            <label class="kt-radio">
-                <input class="form-control" type="radio" name="PaymentPeriodType"
-                
-                     />
-                {{"AnnualPrice" | localize}}:
-                
-                {{price}}
-                <span>
 
-                </span>
+        <!--custom payment-->
+        <div *ngIf="price > 0 && selectedPaymentPeriodType.Monthly" class="form-group">
+            <label class="kt-radio">
+                <input class="form-control" type="radio" name="PaymentPeriodType" [checked]="selectedPaymentPeriodType==paymentPeriodType.Monthly"
+                    [value]="paymentPeriodType.Monthly"
+                    (change)="onPaymentPeriodChangeChange(paymentPeriodType.Monthly)" />
+                {{"MonthlyPrice" | localize}}:
+                {{appSession.application.currencySign}}{{price | number : '1.2-2'}}
+                <span></span>
             </label>
         </div>
+
+        <div *ngIf="price > 0 && selectedPaymentPeriodType.Annual" class="form-group">
+            <label class="kt-radio">
+                <input class="form-control" type="radio" name="PaymentPeriodType" [checked]="selectedPaymentPeriodType==paymentPeriodType.Annual"
+                [value]="paymentPeriodType.Annual"
+                    (change)="onPaymentPeriodChangeChange(paymentPeriodType.Annual)" />
+                {{"AnnualPrice" | localize}}:
+                {{appSession.application.currencySign}}{{price | number : '1.2-2'}}
+                <span></span>
+            </label>
+        </div>
+
+
 
         <div class="kt-separator kt-separator--border-dashed"></div>
 
