UI fixes for trial balance report modal

--- a/angular/src/app/main/reports/trialbalance-reports/trialbalance-reports.component.html
+++ b/angular/src/app/main/reports/trialbalance-reports/trialbalance-reports.component.html
@@ -64,23 +64,6 @@
 
 <div class="record-card-header">
     <div class="record-card-header-bottom">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <div class="modal fade" id="kt_modal_6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -94,7 +77,7 @@
                         
                             <div class="modal_month">
                                 <div class="row"> 
-                                    <div >
+                                    <div class="col-6 px-4">
                                         <div class="month-calender">
                                             <form class="input-arrow">
                                                 <input [(ngModel)]="FirstMonth"  required="required" autocomplete="off" class="form-control"
@@ -113,7 +96,7 @@
                                         </div>
                                     </div>
                                     
-                            <div >
+                            <div class="col-6 px-4 border-gray border-left">
                                 <div class="month-calender">
                                     <form class="input-arrow">
                                         <input [(ngModel)]="SecondMonth"  required="required" autocomplete="off" class="form-control"
